fix desktop header width, fix mobile logo spacing

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,7 @@
 .header {
   margin: 0 auto;
   padding: 45px 0 40px;
-  max-width: 840px;
+  max-width: 880px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 620px) {
   .header {
-    padding: 28px 0;
+    padding: 28px 27px;
   }
 
   .header__image {
